--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="menu">
           
                 <li class="item"><a href="#">BIO</a></li>
-                <li class="item"><a href="#">Resume</a></li>
+                <li class="item"><a href="resume.html">Resume</a></li>
                 <li class="item"><a href="#">Projects</a></li>
                 <li class="toggle"><span class="bars"></span></li>
         
