--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
            document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
                var adobeDCView = new AdobeDC.View({clientId: "0bfb170b50ce4b098799e394bd6b4f9a", divId: "adobe-dc-view"});
                adobeDCView.previewFile({
-                   content:{location: {url: "C:\Users\John Taoi\Desktop\New folder\TCY_CS351final\TCY_CS351final\resume.pdf"}},
+                   content:{location: {url: "resume.pdf"}},
                    metaData:{fileName: "resume.pdf"}
                
             });
@@ -38,8 +38,8 @@
     <body>
         <nav>
             <ul class="menu">
-                    <li class="item"><a  href="index.html" target="_self">BIO</a></li>
-                    <li class="item"><a href="resume.html" target="_self">Resume</a></li>
+                    <li class="item"><a  href="index.htm" target="_self">BIO</a></li>
+                    <li class="item"><a href="resume.htm" target="_self">Resume</a></li>
                     <li class="item"><a href="#">Projects</a></li>
                     <li class="toggle"><span class="bars"></span></li>
             </ul>
