--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav>
         <ul class="menu">
           
-                <li class="item"><a href="#">BIO</a></li>
+                <li class="item"><a href="index.html">BIO</a></li>
                 <li class="item"><a href="resume.html">Resume</a></li>
                 <li class="item"><a href="#">Projects</a></li>
                 <li class="toggle"><span class="bars"></span></li>
