--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
         });
         });
         </script>
-       <div id="adobe-dc-view"></div>
+       
        <script src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
        <script type="text/javascript">
            document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
@@ -44,6 +44,6 @@
                     <li class="toggle"><span class="bars"></span></li>
             </ul>
         </nav>
-        
+        <iframe id= "pdfviewer"src="https://docs.google.com/document/d/e/2PACX-1vTm_nCsIsRxjnkT5hF_1hMwlpJBeeO5hhvjqXj5A-VvJ7vDflaFE6vyINIXdbXawbHhsdb9iXoaYPi7/pub?embedded=true" width="100%" height="1000px"></iframe>
     </body>
 </html>
