--- a/resume.html
+++ b/resume.html
@@ -38,12 +38,16 @@
     <body>
         <nav>
             <ul class="menu">
-                    <li class="item"><a  href="index.htm" target="_self">BIO</a></li>
-                    <li class="item"><a href="resume.htm" target="_self">Resume</a></li>
+                    <li class="item"><a  href="index.html" target="_self">BIO</a></li>
+                    <li class="item"><a href="resume.html" target="_self">Resume</a></li>
                     <li class="item"><a href="#">Projects</a></li>
                     <li class="toggle"><span class="bars"></span></li>
             </ul>
         </nav>
-        <iframe id= "pdfviewer"src="https://docs.google.com/document/d/e/2PACX-1vTm_nCsIsRxjnkT5hF_1hMwlpJBeeO5hhvjqXj5A-VvJ7vDflaFE6vyINIXdbXawbHhsdb9iXoaYPi7/pub?embedded=true" width="100%" height="1000px"></iframe>
+        <div style="text-align:center;">
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTm_nCsIsRxjnkT5hF_1hMwlpJBeeO5hhvjqXj5A-VvJ7vDflaFE6vyINIXdbXawbHhsdb9iXoaYPi7/pub?embedded=true" style="width: 100%; height: 800px;"></iframe>
+         
+            <!-- <iframe src="https://docs.google.com/document/d/e/2PACX-1vTm_nCsIsRxjnkT5hF_1hMwlpJBeeO5hhvjqXj5A-VvJ7vDflaFE6vyINIXdbXawbHhsdb9iXoaYPi7/pub?embedded=true" width="50%" height="1000px"></iframe> -->
+        </div>
     </body>
 </html>
