--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           
                 <li class="item"><a href="index.html">BIO</a></li>
                 <li class="item"><a href="resume.html">Resume</a></li>
-                <li class="item"><a href="#">Projects</a></li>
+                <li class="item"><a href="gpa.html">GPA Calculator</a></li>
                 <li class="toggle"><span class="bars"></span></li>
         
         </ul>
